--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,8 @@ footer{
 /*  Responsive web design for mobile  */
 
 @media all and (max-width: 670px) {
+ 
+ 
   
 #navbar{
     
@@ -298,6 +300,9 @@ footer{
 
 .welcome-section{
   height:150%;
+  background: #FF0099 no-repeat center fixed;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #493240, #FF0099);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #493240, #FF0099); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 
@@ -310,6 +315,9 @@ footer{
 .projects{
 height:350%;
 padding-top:5px;
+background: #FF0099 no-repeat center fixed;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #493240, #FF0099);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #493240, #FF0099); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  
 }
 
@@ -348,6 +356,9 @@ font-family:Verdana, Geneva, Tahoma, sans-serif;
 
 .footer{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: #FF0099 no-repeat center fixed;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #493240, #FF0099);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #493240, #FF0099); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 }
