--- a/styles.css
+++ b/styles.css
@@ -346,6 +346,7 @@ margin-bottom:20px;
 
 .description h3{
  font-size: 35px;
+ color:white;
 }
 
 
@@ -356,6 +357,7 @@ font-family:Verdana, Geneva, Tahoma, sans-serif;
 
 
  .contact{
+      color:white;
       background: #FF0099 no-repeat center fixed;  /* fallback for old browsers */
       background: -webkit-linear-gradient(to right, #493240, #FF0099);  /* Chrome 10-25, Safari 5.1-6 */
       background: linear-gradient(to right, #493240, #FF0099); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
