--- a/styles.css
+++ b/styles.css
@@ -272,17 +272,18 @@ footer{
 @media all and (max-width: 670px) {
  
 .links-top{
-  padding-right: 25px;
+  padding-right: 30px;
   font-size:30px;
-
 }
 
+#nav{
+  margin-right: -30px;
+}
+
+
 .profile-pic{
-  
   height:200px;
   width:180px;
-   
-  
 }
 
 .welcome-section{
